--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,7 +8,11 @@
 @source "../**/*.vue";
 
 @theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+    /* --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol', 'Noto Color Emoji'; */
+    --font-sans: 'Inter';
+    --font-poppins: 'Poppins';
+    --font-jakarta: 'Plus Jakarta Sans';
     --color-spacehub: #4535AF;
+    --color-neutral-black: #39404B;
 }
